# qt_starter

./: CMakeLists.txt  README.md  make_and_run.ps1  run_tests.ps1
include/: lib.h
src/: main.cpp
tests/: tests.cpp
